Split into files vuedoku

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ A rust implementation of annoy(https://github.com/spotify/annoy) (Index serving 
 """
 
 [dependencies]
+libc = "0.2"
 memmap = "0.6.2"
 
 
