--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ Cargo.lock
 
 # User-specific stuff
 .idea/**/workspace.xml
+.idea/**/workspace.xml*
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
