--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,18 +1,30 @@
+image: 
+  - Visual Studio 2017
 environment:
   matrix:
   - TARGET: x86_64-pc-windows-msvc
-  - TARGET: i686-pc-windows-msvc
-  - TARGET: i686-pc-windows-gnu
+  #- TARGET: i686-pc-windows-msvc
+  #- TARGET: i686-pc-windows-gnu
 install:
   - ps: Start-FileDownload "https://static.rust-lang.org/dist/rust-nightly-${env:TARGET}.exe"
   - rust-nightly-%TARGET%.exe /VERYSILENT /NORESTART /DIR="C:\Program Files (x86)\Rust"
-  - SET PATH=%PATH%;C:\Program Files (x86)\Rust\bin
-  - SET PATH=%PATH%;C:\MinGW\bin
+  - SET PATH=C:\Program Files (x86)\Rust\bin;C:\MinGW\bin;%PATH%
   - rustc -V
   - cargo -V
-build: false
+build_script:
+  - cargo build --release
+  - dotnet build -c Release dotnet/RuAnnoy.sln
 test_script:
   - cargo test --release
+  #- dotnet test -c Release dotnet/RuAnnoy.sln
 branches:
   only:
     - master
+artifacts:
+  - path: '**\*.nupkg'
+nuget:
+  disable_publish_on_pr: true
+deploy:
+  provider: NuGet
+  api_key:
+    secure: nNWiXk+ZiOOh5sHV/C9Z9pqZ8GFpaQFqAR/P0/t09h81Ppx3xed6VsWd4w7FMn2R
