--- a/dotnet/Directory.Build.props
+++ b/dotnet/Directory.Build.props
@@ -19,7 +19,7 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="Microsoft.Net.Compilers" Version="2.8.2">
+    <PackageReference Include="Microsoft.Net.Compilers" Version="2.8.2" Condition=" '$(OS)' == 'Windows_NT' ">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="SonarAnalyzer.CSharp" Version="7.3.1.5982">
