--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: csharp
 mono: none
-dotnet: 2.1.300
+dotnet: 2.1.302
 os:
 - osx
 - linux
@@ -20,10 +20,12 @@ script:
 - cargo build --release
 - cargo test --release
 - dotnet build ${TRAVIS_BUILD_DIR}/dotnet/RuAnnoy-Batteries-${OSTAG}-x64/RuAnnoy-Batteries-${OSTAG}-x64.csproj -c Release
+- mkdir ${TRAVIS_BUILD_DIR}/artifacts/
+- cp ${TRAVIS_BUILD_DIR}/dotnet/RuAnnoy-Batteries-${OSTAG}-x64/bin/Release/*.nupkg ${TRAVIS_BUILD_DIR}/artifacts/
 deploy:
   skip_cleanup: true
   provider: script
-  script: bash ${TRAVIS_BUILD_DIR}/dotnet/upload_nuget.sh
+  script: dotnet nuget push ${TRAVIS_BUILD_DIR}/artifacts/*.nupkg -k ${NUGET_API_KEY}
   on:
     branch: master
     os: osx
