--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,6 +11,8 @@ test_script:
 branches:
   only:
     - master
+pull_requests:
+  do_not_increment_build_number: true
 artifacts:
   - path: '**\*.nupkg'
 nuget:
