--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,9 +3,8 @@ image:
   - Visual Studio 2017
 environment:
   matrix:
-  - TARGET: x86_64-pc-windows-msvc
-  #- TARGET: i686-pc-windows-msvc
-  #- TARGET: i686-pc-windows-gnu
+  - RUST_TOOL_CHAIN: stable
+  #- RUST_TOOL_CHAIN: nightly
 test_script:
   - cargo test --release
 branches:
@@ -29,7 +28,7 @@ for:
       only:
         - image: Ubuntu
     install:
-      - curl https://sh.rustup.rs -sSf | sh -s -- -y
+      - curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain ${RUST_TOOL_CHAIN}
       - source $HOME/.cargo/env
     build_script:
       - cargo build --release
@@ -39,9 +38,9 @@ for:
       only:
         - image: Visual Studio 2017
     install:
-      - ps: Start-FileDownload "https://static.rust-lang.org/dist/rust-nightly-${env:TARGET}.exe"
-      - rust-nightly-%TARGET%.exe /VERYSILENT /NORESTART /DIR="C:\Program Files (x86)\Rust"
-      - SET PATH=C:\Program Files (x86)\Rust\bin;C:\MinGW\bin;%PATH%
+      - ps: Start-FileDownload "https://win.rustup.rs/x86_64" -FileName "rustup-init.exe"
+      - rustup-init.exe -y --default-toolchain %RUST_TOOL_CHAIN%
+      - SET PATH=%USERPROFILE%\.cargo\bin;C:\MinGW\bin;%PATH%
       - rustc -V
       - cargo -V
     build_script:
