--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,13 @@ install:
 - curl https://sh.rustup.rs -sSf | sh -s -- -y
 - source $HOME/.cargo/env
 - rustup default stable
+- rustup component add rustfmt-preview
+- cargo -V
+- rustc -V
 script:
 - cargo build --release
 - cargo test --release
+- cargo fmt --all -- --check
 - dotnet build ${TRAVIS_BUILD_DIR}/dotnet/RuAnnoy-Batteries-${OSTAG}-x64/RuAnnoy-Batteries-${OSTAG}-x64.csproj -c Release
 - mkdir ${TRAVIS_BUILD_DIR}/artifacts/
 - cp ${TRAVIS_BUILD_DIR}/dotnet/RuAnnoy-Batteries-${OSTAG}-x64/bin/Release/*.nupkg ${TRAVIS_BUILD_DIR}/artifacts/
