--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ru_annoy"
 edition = "2018"
-version = "0.1.0"
+version = "0.1.0-dev1"
 authors = ["kis3tar"]
 license = "MIT"
 repository = "https://github.com/kis3tar/RuAnnoy"
