--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: csharp
-sudo: true
+sudo: required
 mono: none
 dist: xenial
 dotnet: 2.2.203
@@ -15,11 +15,25 @@ env:
 branches:
   only:
     - master
+cache: cargo
+addons:
+  apt:
+    packages:
+      - libcurl4-openssl-dev
+      - libelf-dev
+      - libdw-dev
+      - binutils-dev
+      - cmake # also required for cargo-update
+    sources:
+      - kalakris-cmake
 install:
   - curl https://sh.rustup.rs -sSf | sh -s -- -y
   - source $HOME/.cargo/env
   - rustup default stable
   - rustup component add rustfmt
+  - cargo install cargo-update || echo "cargo-update already installed"
+  - cargo install cargo-travis || echo "cargo-travis already installed"
+  - cargo install-update -a # update outdated cached binaries
   - cargo -V
   - rustc -V
 script:
@@ -31,6 +45,9 @@ script:
   - dotnet build ${TRAVIS_BUILD_DIR}/dotnet/RuAnnoy-Batteries-${OSTAG}-x64/RuAnnoy-Batteries-${OSTAG}-x64.csproj -c Release
   - mkdir ${TRAVIS_BUILD_DIR}/artifacts/
   - cp ${TRAVIS_BUILD_DIR}/dotnet/RuAnnoy-Batteries-${OSTAG}-x64/bin/Release/*.nupkg ${TRAVIS_BUILD_DIR}/artifacts/
+after_success:
+  # measure code coverage and upload to coveralls.io
+  - cargo coveralls
 #deploy:
 #  skip_cleanup: true
 #  provider: script
