--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,9 @@ pull_requests:
   do_not_increment_build_number: true
 artifacts:
   - path: '**\*.nupkg'
+    name: nupkg
+  - path: '**\*.snupkg'
+    name: snupkg
 nuget:
   disable_publish_on_pr: true
 matrix:
