--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: csharp
 sudo: required
 mono: none
 dist: xenial
-dotnet: 3.1.405
+dotnet: 5.0.103
 os:
   - osx
   - linux
@@ -40,10 +40,11 @@ install:
 script:
   - cargo build --release
   - cargo test --release
-  - cargo build --release --features cffi
-  - cargo test --release --features cffi
+  - cargo build --release --all-features
+  - cargo test --release --all-features
   - cargo fmt --all -- --check
-  - dotnet build ${TRAVIS_BUILD_DIR}/dotnet/RuAnnoy-Batteries-${OSTAG}-x64/RuAnnoy-Batteries-${OSTAG}-x64.csproj -c Release
+  - dotnet build -c Release ${TRAVIS_BUILD_DIR}/dotnet/RuAnnoy-Batteries-${OSTAG}-x64
+  - dotnet test -c Release -f net5 dotnet/RuAnnoy.Tests
   - mkdir ${TRAVIS_BUILD_DIR}/artifacts/
   - cp ${TRAVIS_BUILD_DIR}/dotnet/RuAnnoy-Batteries-${OSTAG}-x64/bin/Release/*.nupkg ${TRAVIS_BUILD_DIR}/artifacts/
   - cargo install cargo-update || echo "cargo-update already installed"
