--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,7 @@ jobs:
         run: |
           pushd java
           ./gradlew test
+          ./gradlew jar
       - name: dotnet Test
         run: |
           dotnet test -c Release dotnet/RuAnnoy.Tests
@@ -61,3 +62,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           path: dotnet/**/*.snupkg
+      - uses: actions/upload-artifact@v2
+        with:
+          path: java/build/libs/*.jar
+          if-no-files-found: error
