Upgrade kotlin and gradle TwitterDisasters

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,16 +23,16 @@ jobs:
           override: true
           components: rustfmt, clippy
       - uses: actions/checkout@v2
-      - name: Benchmarks0 - Linux
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          sudo sh -c 'wget -qO- https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -'
-          sudo sh -c 'wget -qO- https://storage.googleapis.com/download.dartlang.org/linux/debian/dart_stable.list > /etc/apt/sources.list.d/dart_stable.list'
-          sudo apt-get update -y
-          sudo apt-get install dart -y
-          sudo ln -sf /usr/lib/dart/bin/dart /usr/bin/dart
-          pushd bench
-          cat ./bench.bat | sed 's/gradlew/.\/gradlew/' | /usr/bin/bash
+      # - name: Benchmarks0 - Linux
+      #   if: matrix.os == 'ubuntu-latest'
+      #   run: |
+      #     sudo sh -c 'wget -qO- https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -'
+      #     sudo sh -c 'wget -qO- https://storage.googleapis.com/download.dartlang.org/linux/debian/dart_stable.list > /etc/apt/sources.list.d/dart_stable.list'
+      #     sudo apt-get update -y
+      #     sudo apt-get install dart -y
+      #     sudo ln -sf /usr/lib/dart/bin/dart /usr/bin/dart
+      #     pushd bench
+      #     cat ./bench.bat | sed 's/gradlew/.\/gradlew/' | /usr/bin/bash
       - name: Cargo Build
         run: |
           cargo build --release
