--- a/bench/rust/Cargo.toml
+++ b/bench/rust/Cargo.toml
@@ -4,7 +4,8 @@ edition = "2018"
 name = "bencher"
 version = "0.1.0"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+simd = ["ru_annoy/simd"] 
 
 [dependencies]
 ru_annoy = {path = "../../"}
