--- a/bench/rust/Cargo.toml
+++ b/bench/rust/Cargo.toml
@@ -5,10 +5,10 @@ name = "bencher"
 version = "0.1.0"
 
 [features]
-simd = ["ru_annoy/simd"] 
+simd = ["annoy-rs/simd"]
 
 [dependencies]
-ru_annoy = {path = "../../"}
+annoy-rs = {path = "../../"}
 
 [profile.release]
 debug = true
