perf improvement MajorLeeNotes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,16 +13,20 @@ version = "0.1.0"
 [features]
 default = ["cffi"]
 
+bench = []
 cffi = ["libc"]
 simd = ["core_simd"]
 
 [dependencies]
 cfg-if = "1"
-core_simd = {git = "https://github.com/rust-lang/stdsimd", version = "0", optional = true}
+core_simd = {git = "https://github.com/rust-lang/portable-simd", optional = true}
 hashbrown = "0"
 lazy_static = "1"
 libc = {version = "0", optional = true}
 memmap2 = "0"
+
+[dev-dependencies]
+rand = "0"
 
 [lib]
 crate-type = ["lib", "cdylib", "staticlib"]
