--- a/bench/rust/Cargo.toml
+++ b/bench/rust/Cargo.toml
@@ -11,4 +11,6 @@ simd = ["annoy-rs/simd"]
 annoy-rs = {path = "../../"}
 
 [profile.release]
-debug = true
+lto = true
+opt-level = 3
+overflow-checks = false
