--- a/bench/rust/Cargo.toml
+++ b/bench/rust/Cargo.toml
@@ -11,6 +11,7 @@ simd = ["annoy-rs/simd"]
 annoy-rs = {path = "../../"}
 
 [profile.release]
+codegen-units = 1
 lto = true
 opt-level = 3
 overflow-checks = false
