--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       - run: cargo +nightly bench --all-features
       - uses: actions/setup-java@v1
         with:
-          java-version: 11
+          java-version: 17
       - name: java Test
         run: |
           pushd java
@@ -95,10 +95,12 @@ jobs:
         with:
           path: java/target/release/*.dylib
           if-no-files-found: error
-      - name: Cargo deny
-        run: |
-          cargo install cargo-deny
-          cargo deny check
+      - uses: EmbarkStudios/cargo-deny-action@v1
+        if: matrix.os == 'ubuntu-latest'
+      # - name: Cargo deny
+      #   run: |
+      #     cargo install cargo-deny
+      #     cargo deny check
       - name: Deploy nugets
         if: github.ref == 'refs/heads/master'
         env:
