--- a/dotnet/RuAnnoy.Tests/RuAnnoy.Tests.csproj
+++ b/dotnet/RuAnnoy.Tests/RuAnnoy.Tests.csproj
@@ -15,12 +15,17 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <Visible>true</Visible>
     </Content>
-    <Content Include="../../target/release/annoy_rs.dll" Condition=" '$(OS)' == 'Windows_NT' ">
+    <Content Include="../../target/release/annoy_rs.dll" Condition="Exists('../../target/release/annoy_rs.dll')">
       <Link>%(Filename)%(Extension)</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <Visible>true</Visible>
     </Content>
-    <Content Include="../../target/release/libannoy_rs.*" Condition=" '$(OS)' != 'Windows_NT' ">
+    <Content Include="../../target/release/libannoy_rs.dylib" Condition="Exists('../../target/release/libannoy_rs.dylib')">
+      <Link>%(Filename)%(Extension)</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <Visible>true</Visible>
+    </Content>
+    <Content Include="../../target/release/libannoy_rs.so" Condition="Exists('../../target/release/libannoy_rs.so')">
       <Link>%(Filename)%(Extension)</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <Visible>true</Visible>
