--- a/java/Cargo.toml
+++ b/java/Cargo.toml
@@ -9,8 +9,7 @@ repository = "https://github.com/kis3tar/RuAnnoy"
 version = "0.1.0"
 
 [features]
-default = ["simd"]
-simd = ["annoy-rs/simd"]
+default = []
 
 [dependencies]
 annoy-rs = {path = "../"}
